// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`subtitle component should render with custom primary color 1`] = `
.c0 {
  color: #7350FF;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 12px;
  font-weight: 400;
  -webkit-letter-spacing: 0.13px;
  -moz-letter-spacing: 0.13px;
  -ms-letter-spacing: 0.13px;
  letter-spacing: 0.13px;
  line-height: 16px;
}

<p
  className="c0"
  color="primary"
>
  Lorem ipsum
</p>
`;

exports[`subtitle component should render with default css properties 1`] = `
.c0 {
  color: #A6A7B3;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 12px;
  font-weight: 400;
  -webkit-letter-spacing: 0.13px;
  -moz-letter-spacing: 0.13px;
  -ms-letter-spacing: 0.13px;
  letter-spacing: 0.13px;
  line-height: 16px;
}

<p
  className="c0"
>
  Lorem ipsum
</p>
`;
